# mcp-hey

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENCE  README.md  SECURITY.md  biome.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  typescript-react.instructions.md
auth/: hey-auth.py
docs/: API.md  TOOLS.md  hey-features-doc.md  product_requirements_document.md
src/: errors.ts  hey-client.ts  index.ts  paths.ts  session.ts
src/__tests__/: attachments.test.ts  cache.test.ts  errors.test.ts  http-helpers.test.ts  organise.test.ts  read.test.ts  send.test.ts  session.test.ts
src/cache/: db.ts  index.ts  messages.ts  schema.ts  search.ts
src/tools/: attachments.ts  http-helpers.ts  organise.ts  read.ts  send.ts
